tests/specs/test/hooks/error_handling.out
Check [WILDLINE]error_handling.ts
running 1 test from ./error_handling.ts
test should not run ...
------- output -------
beforeAll hook running
----- output end -----
test should not run ... FAILED ([WILDCARD])

 ERRORS 

test should not run => ./error_handling.ts:16:6
error: Error: beforeAll hook failed
  throw new Error("beforeAll hook failed");
        ^
    at Object.fn ([WILDLINE]error_handling.ts:7:9)

 FAILURES 

test should not run => ./error_handling.ts:16:6

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
